--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "vue-js-modal": "^1.3.31",
     "vue-material-design-icons": "^4.1.0",
     "vue-router": "^3.1.3",
-    "vue-sidebar-menu": "^4.2.2"
+    "vue-sidebar-menu": "^4.2.2",
+    "vue-sweetalert2": "^2.1.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.11.0",
